[gd_scene load_steps=9 format=3 uid="uid://5avmmk6378cb"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_d7vcy"]
[ext_resource type="Texture2D" uid="uid://ctk0rc76s5tri" path="res://assets/backgrounds/Frame 15.png" id="2_w6uia"]
[ext_resource type="Texture2D" uid="uid://kfgynanxgo0l" path="res://assets/backgrounds/Untitled design (92) 1.png" id="3_nk8gb"]
[ext_resource type="Texture2D" uid="uid://bu2ay4rmxpqxl" path="res://assets/backgrounds/Group 138.png" id="4_ngsig"]
[ext_resource type="Texture2D" uid="uid://yd5bv3d10rrn" path="res://assets/backgrounds/Alt History.png" id="5_1mahn"]
[ext_resource type="Texture2D" uid="uid://cnbdt1c782p6n" path="res://assets/backgrounds/image-removebg-preview 1.png" id="6_ohxvh"]
[ext_resource type="Texture2D" uid="uid://cpgba7n4ishdt" path="res://assets/backgrounds/image-removebg-preview (2) 2.png" id="7_5g85e"]
[ext_resource type="Texture2D" uid="uid://88elgp7avv30" path="res://assets/backgrounds/Tap to continue.png" id="8_ecbtr"]

[node name="GameResult" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_d7vcy")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_w6uia")

[node name="CharacterImage" type="Sprite2D" parent="."]
position = Vector2(258, 483)
texture = ExtResource("3_nk8gb")

[node name="MessageContainer" type="Sprite2D" parent="."]
position = Vector2(844, 431)
texture = ExtResource("4_ngsig")

[node name="AltHistory" type="Sprite2D" parent="."]
position = Vector2(672, 104)
scale = Vector2(0.477099, 0.477099)
texture = ExtResource("5_1mahn")

[node name="Big Splash" type="Sprite2D" parent="."]
position = Vector2(771, 107)
scale = Vector2(0.461709, 0.461709)
texture = ExtResource("6_ohxvh")

[node name="Dot2" type="Sprite2D" parent="."]
position = Vector2(491, 118)
scale = Vector2(0.378427, 0.378427)
texture = ExtResource("7_5g85e")

[node name="TapToContinue" type="Sprite2D" parent="."]
position = Vector2(1091, 615)
texture = ExtResource("8_ecbtr")

[node name="MessageBox" type="Label" parent="."]
layout_mode = 0
offset_left = 494.0
offset_top = 350.0
offset_right = 1598.0
offset_bottom = 512.0
theme_override_font_sizes/font_size = 32
text = "Awesome chief, we managed to make 
people believe in our theory "

[node name="TapDetector" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
